# aicage

./: .env  .gitmodules  .pymarkdown.json  AGENTS.md  CHANGELOG.md  CONFIG.md  DEVELOPMENT.md  README.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.github/workflows/: base-images.yml  build-base.yml  build-images.yml  final-images.yml  integration-test-windows-single.yml  integration-test.yml  publish.yml  release.yml
base-images/: Dockerfile  docker-bake.hcl
base-images/scripts/: build-all.sh  build.sh  install_node.sh  install_os_packages.sh  test-all.sh  test.sh
config/: config.yaml  images-metadata.yaml
config/extension-build/: Dockerfile
config/validation/: agent.schema.json
doc/: DEVELOPMENT.md  custom-agents.md  custom-base-images.md  extensions.md  integration-tests.md  python-test-structure-guidelines.md  update-processes.md  visibility.md
doc/ai/: TASK.md
doc/ideas/: IDEAS.md
doc/tests-on-Mac/: aicage-tests-on-Mac.md
doc/validation/: config.schema.json  images-metadata.schema.json
final-images/: Dockerfile  docker-bake.hcl
final-images/scripts/: build-all.sh  build.sh  test-all.sh  test.sh
scripts/: common.sh  lint.sh  sync-with-aicage-image-projects.sh  sync-with-aicage-image.sh  validate-config-with-schemas.sh
scripts/debug/: agent-versions-util.sh  check-src-vs-test-files.sh  debug-print-agent_path.sh  find-dup-defs.sh  get-image-digest-from-docker-io.sh  get-remote-digest-anon.sh  lint.ps1  run-debug-print-agent_path.sh
scripts/util/: count_aicage_tags.sh
tests/: test_cli.py
(+465 files in other folders)
